Completed About Section

--- a/index.html
+++ b/index.html
@@ -151,7 +151,57 @@
       </section>
 
       <!--==================== ABOUT ====================-->
-      <section class="about section" id="about"></section>
+      <section class="about section" id="about">
+        <h2 class="section__title">About Me</h2>
+        <span class="section__subtitle">My Introduction</span>
+
+        <div class="about__container container grid">
+          <img src="assets/img/razi2.jpg" alt="" class="about__img" />
+
+          <div class="about__data">
+            <p class="about__description">
+              Hi, I’m Mohinuddin Razi, a recent Computer Science Engineering
+              graduate with a passion for technology and problem-solving. My
+              skills include Java, JavaScript, Python, front-end development,
+              and machine learning. I’m excited to apply my expertise to
+              real-world challenges and grow in a dynamic, innovative
+              environment. Thanks for visiting my portfolio!
+            </p>
+            <div class="about__info">
+              <div>
+                <span class="about__info-title">01+</span>
+                <span class="about__info-name"
+                  >Years <br />
+                  experience</span
+                >
+              </div>
+              <div>
+                <span class="about__info-title">03+</span>
+                <span class="about__info-name"
+                  >Completed <br />
+                  Project</span
+                >
+              </div>
+              <div>
+                <span class="about__info-title">01+</span>
+                <span class="about__info-name"
+                  >Companies <br />
+                  worked</span
+                >
+              </div>
+            </div>
+            <div class="about__buttons">
+              <a
+                download=""
+                href="assets/pdf/M_Razi_Resume.pdf"
+                class="button button--flex"
+              >
+                Download CV<i class="uil uil-download-alt button__icon"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <!--==================== SKILLS ====================-->
       <section class="skills section" id="skills"></section>
