--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         <span class="section__subtitle">My Technical Level</span>
         <div class="skills__container container grid">
           <div>
-            <!--==================== SKILLS 1====================-->
+            <!--==================== SKILLS 1 ====================-->
             <div class="skills__content skills__open">
               <div class="skills__header">
                 <i class="uil uil-brackets-curly skills__icon"></i>
@@ -259,7 +259,7 @@
                 </div>
               </div>
             </div>
-            <!--==================== SKILLS 2====================-->
+            <!--==================== SKILLS 2 ====================-->
             <div class="skills__content skills__close">
               <div class="skills__header">
                 <i class="uil uil-server-connection skills__icon"></i>
@@ -307,11 +307,20 @@
                     <span class="skills__percentage skills__python"> </span>
                   </div>
                 </div>
+                <div class="skills__data">
+                  <div class="skills__titles">
+                    <h3 class="skills__name">Machine Learning</h3>
+                    <span class="skills__number">60%</span>
+                  </div>
+                  <div class="skills__bar">
+                    <span class="skills__percentage skills__ml"> </span>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
           <div>
-            <!--==================== SKILLS 3====================-->
+            <!--==================== SKILLS 3 ====================-->
             <div class="skills__content skills__close">
               <div class="skills__header">
                 <i class="uil uil-swatchbook skills__icon"></i>
@@ -343,7 +352,7 @@
                 </div>
               </div>
             </div>
-            <!--==================== SKILLS 4====================-->
+            <!--==================== SKILLS 4 ====================-->
             <div class="skills__content skills__close">
               <div class="skills__header">
                 <i class="uil uil-edit skills__icon"></i>
@@ -380,7 +389,143 @@
       </section>
 
       <!--==================== QUALIFICATION ====================-->
-      <section class="qualification section"></section>
+      <section class="qualification section">
+        <h2 class="section__title">Qualification</h2>
+        <span class="section__subtitle">My Personal Journey</span>
+
+        <div class="qualification__container container">
+          <div class="qualification__tabs">
+            <div
+              class="qualification__button button--flex qualification__active"
+              data-target="#education"
+            >
+              <i class="uil uil-graduation-cap qualification__icon"></i>
+              Education
+            </div>
+
+            <div class="qualification__button button--flex" data-target="#work">
+              <i class="uil uil-briefcase-alt qualification__icon"></i>
+              Work
+            </div>
+          </div>
+
+          <div class="qualification__sections">
+            <!--==================== QUALIFICATION CONTENT 1 ====================-->
+            <div
+              class="qualification__content qualification__active"
+              data-content
+              id="education"
+            >
+              <!--==================== QUALIFICATION 1 ====================-->
+              <div class="qualification__data">
+                <div>
+                  <h3 class="qualification__title">
+                    B.E, Computer Science & Engineering
+                  </h3>
+                  <span class="qualification__subtitle"
+                    >Mangalore Institute of Technology & Engineering</span
+                  >
+                  <div class="qualification__calendar">
+                    <i class="uil uil-calendar-alt"></i>
+                    2020 - 2024
+                  </div>
+                </div>
+                <div>
+                  <span class="qualification__rounder"></span>
+                  <span class="qualification__line"></span>
+                </div>
+              </div>
+              <!--==================== QUALIFICATION 2 ====================-->
+              <div class="qualification__data">
+                <div></div>
+                <div>
+                  <span class="qualification__rounder"></span>
+                  <span class="qualification__line"></span>
+                </div>
+                <div>
+                  <h3 class="qualification__title">
+                    Pre-University Education - PCMCs
+                  </h3>
+                  <span class="qualification__subtitle">MGM PU College</span>
+                  <div class="qualification__calendar">
+                    <i class="uil uil-calendar-alt"></i>
+                    2018 - 2020
+                  </div>
+                </div>
+              </div>
+              <!--==================== QUALIFICATION 3 ====================-->
+              <div class="qualification__data">
+                <div>
+                  <h3 class="qualification__title">Secondary School (SSLC)</h3>
+                  <span class="qualification__subtitle"
+                    >Christ School Manipal</span
+                  >
+                  <div class="qualification__calendar">
+                    <i class="uil uil-calendar-alt"></i>
+                    2017 - 2018
+                  </div>
+                </div>
+                <div>
+                  <span class="qualification__rounder"></span>
+                  <!-- <span class="qualification__line"></span> -->
+                </div>
+              </div>
+            </div>
+            <!--==================== QUALIFICATION CONTENT 2 ====================-->
+            <div class="qualification__content" data-content id="work">
+              <!--==================== QUALIFICATION 1 ====================-->
+              <div class="qualification__data">
+                <div>
+                  <h3 class="qualification__title">AIML Intern</h3>
+                  <span class="qualification__subtitle">Dlithe</span>
+                  <div class="qualification__calendar">
+                    <i class="uil uil-calendar-alt"></i>
+                    Aug’ 23 - Sep’ 23
+                  </div>
+                </div>
+                <div>
+                  <span class="qualification__rounder"></span>
+                  <span class="qualification__line"></span>
+                </div>
+              </div>
+              <!--==================== QUALIFICATION 2 ====================-->
+
+              <!-- <div class="qualification__data">
+                <div></div>
+                <div>
+                  <span class="qualification__rounder"></span>
+                  <span class="qualification__line"></span>
+                </div>
+                <div>
+                  <h3 class="qualification__title">Software Engineer</h3>
+                  <span class="qualification__subtitle">Company 1</span>
+                  <div class="qualification__calendar">
+                    <i class="uil uil-calendar-alt"></i>
+                    2024 - 2026
+                  </div>
+                </div>
+              </div> -->
+
+              <!--==================== QUALIFICATION 3 ====================-->
+
+              <!-- <div class="qualification__data">
+                <div>
+                  <h3 class="qualification__title">Software Engineer</h3>
+                  <span class="qualification__subtitle">Company 2</span>
+                  <div class="qualification__calendar">
+                    <i class="uil uil-calendar-alt"></i>
+                    2026 - 2028
+                  </div>
+                </div>
+                <div>
+                  <span class="qualification__rounder"></span>
+                  <span class="qualification__line"></span>
+                </div>
+              </div> -->
+            </div>
+          </div>
+        </div>
+      </section>
 
       <!--==================== SERVICES ====================-->
       <section class="services section" id="services"></section>
