--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                 <div class="skills__data">
                   <div class="skills__titles">
                     <h3 class="skills__name">Firebase</h3>
-                    <span class="skills__number">80%</span>
+                    <span class="skills__number">70%</span>
                   </div>
                   <div class="skills__bar">
                     <span class="skills__percentage skills__firebase"> </span>
@@ -300,11 +300,11 @@
                 </div>
                 <div class="skills__data">
                   <div class="skills__titles">
-                    <h3 class="skills__name">Python</h3>
-                    <span class="skills__number">70%</span>
+                    <h3 class="skills__name">SQL</h3>
+                    <span class="skills__number">80%</span>
                   </div>
                   <div class="skills__bar">
-                    <span class="skills__percentage skills__python"> </span>
+                    <span class="skills__percentage skills__sql"> </span>
                   </div>
                 </div>
                 <div class="skills__data">
@@ -321,6 +321,47 @@
           </div>
           <div>
             <!--==================== SKILLS 3 ====================-->
+            <div class="skills__content skills__open">
+              <div class="skills__header">
+                <i class="uil uil-programming-language skills__icon"></i>
+                <div>
+                  <h1 class="skills__titles">Programming Language</h1>
+                  <span class="skills__subtitle">Less Than 1 year</span>
+                </div>
+
+                <i class="uil uil-angle-down skills__arrow"></i>
+              </div>
+              <div class="skills__list grid">
+                <div class="skills__data">
+                  <div class="skills__titles">
+                    <h3 class="skills__name">C Programming</h3>
+                    <span class="skills__number">80%</span>
+                  </div>
+                  <div class="skills__bar">
+                    <span class="skills__percentage skills__c"> </span>
+                  </div>
+                </div>
+                <div class="skills__data">
+                  <div class="skills__titles">
+                    <h3 class="skills__name">Java</h3>
+                    <span class="skills__number">60%</span>
+                  </div>
+                  <div class="skills__bar">
+                    <span class="skills__percentage skills__java"> </span>
+                  </div>
+                </div>
+                <div class="skills__data">
+                  <div class="skills__titles">
+                    <h3 class="skills__name">Python</h3>
+                    <span class="skills__number">70%</span>
+                  </div>
+                  <div class="skills__bar">
+                    <span class="skills__percentage skills__python"> </span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!--==================== SKILLS 4 ====================-->
             <div class="skills__content skills__close">
               <div class="skills__header">
                 <i class="uil uil-swatchbook skills__icon"></i>
@@ -352,7 +393,7 @@
                 </div>
               </div>
             </div>
-            <!--==================== SKILLS 4 ====================-->
+            <!--==================== SKILLS 5 ====================-->
             <div class="skills__content skills__close">
               <div class="skills__header">
                 <i class="uil uil-edit skills__icon"></i>
