cmpleted project section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
 
     <!--==================== SWIPER CSS ====================-->
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="assets/css/swiper-bundle.min.css" />
 
     <!--==================== CSS ====================-->
     <link rel="stylesheet" href="assets/css/styles.css" />
@@ -758,7 +758,120 @@
       </section>
 
       <!--==================== PORTFOLIO ====================-->
-      <section class="portfolio section" id="portfolio"></section>
+      <section class="portfolio section" id="portfolio">
+        <h2 class="section__title">Portfolio</h2>
+        <span class="section__subtitle">Most Recent Work</span>
+
+        <div class="portfolio__container container swiper-container">
+          <div class="swiper-wrapper">
+            <!--==================== PORTFOLIO 1 ====================-->
+            <div class="portfolio__content grid swiper-slide">
+              <img
+                src="assets/img/real_estate.png"
+                alt=""
+                class="portfolio__img"
+              />
+
+              <div class="portfolio__data">
+                <h3 class="portfolio__title">Real Estate Website</h3>
+                <p class="portfolio__description">
+                  This project aims to develop a online real estate platform.
+                  Users can seamlessly search, filter, and discover properties,
+                  while agents can effectively manage listings and connect with
+                  potential clients.
+                </p>
+                <a
+                  href="https://rameez-estate.onrender.com/"
+                  class="button button--flex button--small portfolio__button"
+                >
+                  Demo
+                  <i class="uil uil-arrow-right button__icon"></i>
+                </a>
+              </div>
+            </div>
+            <!--==================== PORTFOLIO 2 ====================-->
+            <div class="portfolio__content grid swiper-slide">
+              <img
+                src="assets/img/Weather App.png"
+                alt=""
+                class="portfolio__img"
+              />
+
+              <div class="portfolio__data">
+                <h3 class="portfolio__title">Weather App</h3>
+                <p class="portfolio__description">
+                  This project aims to develop a weather application providing
+                  real-time and accurate weather information. Users can easily
+                  access current conditions and forecasts for any location
+                  worldwide.
+                </p>
+                <a
+                  href="https://mohinuddin-razi.github.io/weatherApp/"
+                  class="button button--flex button--small portfolio__button"
+                >
+                  Demo
+                  <i class="uil uil-arrow-right button__icon"></i>
+                </a>
+              </div>
+            </div>
+            <!--==================== PORTFOLIO 3 ====================-->
+            <div class="portfolio__content grid swiper-slide">
+              <img src="assets/img/Snako.png" alt="" class="portfolio__img" />
+
+              <div class="portfolio__data">
+                <h3 class="portfolio__title">Venomous Snake detector</h3>
+                <p class="portfolio__description">
+                  This project aims to develop a web-based platform for
+                  identifying venomous snake species.Users can upload images of
+                  snakes for accurate identification and receive emergency
+                  response guidelines.
+                </p>
+                <a
+                  href="https://github.com/MOHINUDDIN-RAZI/Venomous-snake-detection"
+                  class="button button--flex button--small portfolio__button"
+                >
+                  Demo
+                  <i class="uil uil-arrow-right button__icon"></i>
+                </a>
+              </div>
+            </div>
+            <!--==================== PORTFOLIO 4 ====================-->
+            <div class="portfolio__content grid swiper-slide">
+              <img
+                src="assets/img/Crop_Price.png"
+                alt=""
+                class="portfolio__img"
+              />
+
+              <div class="portfolio__data">
+                <h3 class="portfolio__title">Crop Price Predictor</h3>
+                <p class="portfolio__description">
+                  This project aims to develop a web-based Crop Price Prediction
+                  Application. This application will provide users with the
+                  ability to predict the future prices of various crops based on
+                  historical data.
+                </p>
+                <a
+                  href="https://github.com/MOHINUDDIN-RAZI/DLITHE---INTERNSHIP"
+                  class="button button--flex button--small portfolio__button"
+                >
+                  Demo
+                  <i class="uil uil-arrow-right button__icon"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- Add Arrows -->
+          <div class="swiper-button-next">
+            <i class="uil uil-angle-right-b swiper-portfolio-icon"></i>
+          </div>
+          <div class="swiper-button-prev">
+            <i class="uil uil-angle-left-b swiper-portfolio-icon"></i>
+          </div>
+          <!-- Add Pagination -->
+          <div class="swiper-pagination"></div>
+        </div>
+      </section>
 
       <!--==================== PROJECT IN MIND ====================-->
       <section class="project section"></section>
@@ -776,7 +889,7 @@
     <!--==================== SCROLL TOP ====================-->
 
     <!--==================== SWIPER JS ====================-->
-    <script src=""></script>
+    <script src="assets/js/swiper-bundle.min.js"></script>
 
     <!--==================== MAIN JS ====================-->
     <script src="assets/js/main.js"></script>
