Completed dark theme functionality and scroll bar

--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
         </div>
 
         <div class="nav_btns">
+          <!-- Theme change button -->
+          <i class="uil uil-moon change-theme" id="theme-button"></i>
+
           <div class="nav__toggle" id="nav-toggle">
             <i class="uil uil-apps"></i>
           </div>
@@ -169,9 +172,9 @@
             </p>
             <div class="about__info">
               <div>
-                <span class="about__info-title">01+</span>
+                <span class="about__info-title"><01</span>
                 <span class="about__info-name"
-                  >Years <br />
+                  >Year <br />
                   experience</span
                 >
               </div>
