--- a/index.html
+++ b/index.html
@@ -1082,14 +1082,26 @@
           </ul>
 
           <div class="footer__socials">
-            <a href="" target="_blank" class="footer__social">
-              <i class="uil uil-facebook-f"></i>
+            <a
+              href="https://www.linkedin.com/in/mohinuddinrazi/"
+              target="_blank"
+              class="footer__social"
+            >
+              <i class="uil uil-linkedin"></i>
             </a>
-            <a href="" target="_blank" class="footer__social">
-              <i class="uil uil-instagram"></i>
+            <a
+              href="https://mail.google.com/mail/u/0/?fs=1&to=mohinuddin6razi@gmail.com&tf=cm"
+              target="_blank"
+              class="footer__social"
+            >
+              <i class="uil uil-envelope"></i>
             </a>
-            <a href="" target="_blank" class="footer__social">
-              <i class="uil uil-twitter-alt"></i>
+            <a
+              href="https://github.com/MOHINUDDIN-RAZI"
+              target="_blank"
+              class="footer__social"
+            >
+              <i class="uil uil-github"></i>
             </a>
           </div>
         </div>
