--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <div class="about__buttons">
               <a
                 download=""
-                href="assets/pdf/M_Razi_Resume.pdf"
+                href="assets/pdf/razi_resume.pdf"
                 class="button button--flex"
               >
                 Download CV<i class="uil uil-download-alt button__icon"></i>
