Added Background Animation

--- a/index.html
+++ b/index.html
@@ -19,6 +19,22 @@
     <title>My Portfolio Website</title>
   </head>
   <body>
+    <div class="wrapper">
+      <div class="round"></div>
+      <div class="round"></div>
+      <div class="round"></div>
+      <div class="round"></div>
+      <div class="round"></div>
+      <div class="round"></div>
+      <div class="round"></div>
+      <div class="round"></div>
+      <div class="round"></div>
+      <div class="round"></div>
+      <div class="round"></div>
+      <div class="round"></div>
+      <div class="round"></div>
+      <div class="round"></div>
+    </div>
     <!--==================== HEADER ====================-->
     <header class="header" id="header">
       <nav class="nav container">
@@ -1138,7 +1154,6 @@
     <a href="#" class="scrollup" id="scroll-up">
       <i class="uil uil-arrow-up scrollup__icon"></i>
     </a>
-
     <!--==================== SWIPER JS ====================-->
     <script src="assets/js/swiper-bundle.min.js"></script>
 
