--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <!--==================== CSS ====================-->
     <link rel="stylesheet" href="assets/css/styles.css" />
 
-    <title>My Portfolio Website</title>
+    <title>Razi's Portfolio</title>
+    <link rel="icon" type="image/x-icon" href="/assets/img/logo.png" />
   </head>
   <body>
     <div class="wrapper">
