--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="assets/css/styles.css" />
 
     <title>Razi's Portfolio</title>
-    <link rel="icon" type="image/x-icon" href="/assets/img/logo.png" />
+    <link rel="icon" type="image/x-icon" href="assets/img/logo.png" />
   </head>
   <body>
     <div class="wrapper">
