--- a/index.html
+++ b/index.html
@@ -554,12 +554,12 @@
                   <!-- <span class="qualification__line"></span> -->
                 </div>
                 <div>
-                  <h3 class="qualification__title">To Be Continued...</h3>
-                  <!-- <span class="qualification__subtitle">Company 1</span>
+                  <h3 class="qualification__title">Freelancing</h3>
+                  <!-- <span class="qualification__subtitle">Company 1</span> -->
                   <div class="qualification__calendar">
                     <i class="uil uil-calendar-alt"></i>
-                    2024 - 2026
-                  </div> -->
+                    2024 - Present
+                  </div>
                 </div>
               </div>
 
